--- a/_posts/thesis_chapters/tocs/2024-6-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-6-5-Design.md_toc.md
@@ -1,75 +1,82 @@
 -   [Exploration of the Formative Learning Design
-    Process](#exploration-of-the-formative-learning-design-process)
+    Process](#exploration-of-the-formative-learning-design-process){#toc-exploration-of-the-formative-learning-design-process}
     -   [Research Questions - April
-        2024](#research-questions---april-2024)
-    -   [Chapter Introduction](#chapter-introduction)
+        2024](#research-questions---april-2024){#toc-research-questions---april-2024}
+    -   [Chapter
+        Introduction](#chapter-introduction){#toc-chapter-introduction}
     -   [Narrative exploration of
-        contradictions](#narrative-exploration-of-contradictions)
+        contradictions](#narrative-exploration-of-contradictions){#toc-narrative-exploration-of-contradictions}
     -   [C1 - contradictions involving the use of game programming and
         asset authoring
-        tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
+        tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools){#toc-c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools}
         -   [Narrative descriptions of shifts of tool
-            use](#narrative-descriptions-of-shifts-of-tool-use)
+            use](#narrative-descriptions-of-shifts-of-tool-use){#toc-narrative-descriptions-of-shifts-of-tool-use}
             -   [Illustration of a conflict experienced by
-                families](#illustration-of-a-conflict-experienced-by-families)
+                families](#illustration-of-a-conflict-experienced-by-families){#toc-illustration-of-a-conflict-experienced-by-families}
         -   [Using a starter game
-            template](#using-a-starter-game-template)
+            template](#using-a-starter-game-template){#toc-using-a-starter-game-template}
             -   [Variable editing for player
-                movement](#variable-editing-for-player-movement)
-            -   [Simple block graphics](#simple-block-graphics)
+                movement](#variable-editing-for-player-movement){#toc-variable-editing-for-player-movement}
+            -   [Simple block
+                graphics](#simple-block-graphics){#toc-simple-block-graphics}
             -   [Level design and
-                prototyping](#level-design-and-prototyping)
+                prototyping](#level-design-and-prototyping){#toc-level-design-and-prototyping}
             -   [Design adaptations to facilitate novice use of a code
-                playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
+                playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground){#toc-design-adaptations-to-facilitate-novice-use-of-a-code-playground}
             -   [Addressing code syntax
-                errors](#addressing-code-syntax-errors)
+                errors](#addressing-code-syntax-errors){#toc-addressing-code-syntax-errors}
             -   [Distributed vs. self-contained approaches to asset
-                creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
+                creation](#distributed-vs.-self-contained-approaches-to-asset-creation){#toc-distributed-vs.-self-contained-approaches-to-asset-creation}
         -   [Observations on the game template and core
-            tools](#observations-on-the-game-template-and-core-tools)
+            tools](#observations-on-the-game-template-and-core-tools){#toc-observations-on-the-game-template-and-core-tools}
     -   [C2 - Participant conflict associated with project navigation
         and use of
-        documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+        documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation){#toc-c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation}
         -   [Narrative on the evolution of resources during
-            P2](#narrative-on-the-evolution-of-resources-during-p2)
-        -   [Quick Start Cards](#quick-start-cards)
-        -   [Code snippet examples](#code-snippet-examples)
+            P2](#narrative-on-the-evolution-of-resources-during-p2){#toc-narrative-on-the-evolution-of-resources-during-p2}
+        -   [Quick Start
+            Cards](#quick-start-cards){#toc-quick-start-cards}
+        -   [Code snippet
+            examples](#code-snippet-examples){#toc-code-snippet-examples}
         -   [Structuring instructional tutorial
-            chapters](#structuring-instructional-tutorial-chapters)
+            chapters](#structuring-instructional-tutorial-chapters){#toc-structuring-instructional-tutorial-chapters}
         -   [Theming the a collection of game design patterns to aid
-            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation){#toc-theming-the-a-collection-of-game-design-patterns-to-aid-navigation}
     -   [C3 - Responding to tensions and barriers in cultural aspects of
         the game making
-        activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
-        -   [Social coding processes](#social-coding-processes)
+        activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity){#toc-c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity}
+        -   [Social coding
+            processes](#social-coding-processes){#toc-social-coding-processes}
         -   [Playtesting as a cultural
-            process](#playtesting-as-a-cultural-process)
+            process](#playtesting-as-a-cultural-process){#toc-playtesting-as-a-cultural-process}
             -   [Local playtesting rather than participation with a
                 wider online
-                community](#local-playtesting-rather-than-participation-with-a-wider-online-community)
+                community](#local-playtesting-rather-than-participation-with-a-wider-online-community){#toc-local-playtesting-rather-than-participation-with-a-wider-online-community}
             -   [Playtesting and the interaction with UMC pedagogy and
                 half-baked games
-                approaches](#playtesting-and-the-interaction-with-umc-pedagogy-and-half-baked-games-approaches)
+                approaches](#playtesting-and-the-interaction-with-umc-pedagogy-and-half-baked-games-approaches){#toc-playtesting-and-the-interaction-with-umc-pedagogy-and-half-baked-games-approaches}
             -   [Playtesting facilitating peer
-                encouragement](#playtesting-facilitating-peer-encouragement)
+                encouragement](#playtesting-facilitating-peer-encouragement){#toc-playtesting-facilitating-peer-encouragement}
             -   [Playtesting and embodied participation in the games of
-                others](#playtesting-and-embodied-participation-in-the-games-of-others)
+                others](#playtesting-and-embodied-participation-in-the-games-of-others){#toc-playtesting-and-embodied-participation-in-the-games-of-others}
             -   [Community concepts and norming behaviour emerging
                 during
-                playtesting](#community-concepts-and-norming-behaviour-emerging-during-playtesting)
+                playtesting](#community-concepts-and-norming-behaviour-emerging-during-playtesting){#toc-community-concepts-and-norming-behaviour-emerging-during-playtesting}
             -   [Motivations and genesis of the drama process (what kind
                 of Maker are
-                you)](#motivations-and-genesis-of-the-drama-process-what-kind-of-maker-are-you)
+                you)](#motivations-and-genesis-of-the-drama-process-what-kind-of-maker-are-you){#toc-motivations-and-genesis-of-the-drama-process-what-kind-of-maker-are-you}
         -   [Description drama process using extracts from vignettes and
             concepts of
-            MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe)
+            MoE](#description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe){#toc-description-drama-process-using-extracts-from-vignettes-and-concepts-of-moe}
             -   [Use of side missions to encourage varied creative
-                practices](#use-of-side-missions-to-encourage-varied-creative-practices)
+                practices](#use-of-side-missions-to-encourage-varied-creative-practices){#toc-use-of-side-missions-to-encourage-varied-creative-practices}
         -   [Outroduction to this part of exploring Drama process and
-            playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting)
-    -   [Chapter Discussion](#chapter-discussion)
+            playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting){#toc-outroduction-to-this-part-of-exploring-drama-process-and-playtesting}
+    -   [Chapter
+        Discussion](#chapter-discussion){#toc-chapter-discussion}
         -   [Summary of barriers and tensions explored in this
-            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
+            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter){#toc-summary-of-barriers-and-tensions-explored-in-this-chapter}
             -   [Exploring tensions involving and authentic tool
-                use](#exploring-tensions-involving-and-authentic-tool-use)
-        -   [Link to next chapter](#link-to-next-chapter)
+                use](#exploring-tensions-involving-and-authentic-tool-use){#toc-exploring-tensions-involving-and-authentic-tool-use}
+        -   [Link to next
+            chapter](#link-to-next-chapter){#toc-link-to-next-chapter}
