--- a/_posts/thesis_chapters/2024-6-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-6-6-Gdps.md
@@ -1599,6 +1599,17 @@ SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
 ## Chapter Conclusion
 
+### Simple table of uses
+
+Outer pipes Cell padding
+
+| GDPs can assist project navigation, acting as a framework for code examples and step-by-step tutorials | GDPs can scaffold the ideation processes                                                         |
+| ------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------ |
+| GDPs aid the process of division of labour                                                             | GDP concepts are used in emerging technical processes                                            |
+| GDPs facilitate learners to design for others                                                          | GDP concepts and language used in informal feedback for peers to influence modification of games |
+| GDPs are propagated into the community through playtesting                                             | GDPs facilitate the use of wider funds of knowledge from home and hobby settings                 |
+| GDPs in the personal appropriation of concepts and processes                                           |                                                                                                  |
+
 ### Summary of the pedagogical opportunities of Game Design Patterns
 
 While their results on the advantages and challenges of patterns use focus principally on the perspective of designers (as a way to frame analysis of the activity and shifting interpretations of pattern interpretations), the participant is also shared. I explore some of the opportunities and challenges they surface addressing learner perspective.
