table of gdps at end of ch

--- a/_posts/thesis_chapters/2024-6-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-6-6-Gdps.md
@@ -1601,10 +1601,9 @@ SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
 ### Simple table of uses
 
-Outer pipes Cell padding
-
-| GDPs can assist project navigation, acting as a framework for code examples and step-by-step tutorials | GDPs can scaffold the ideation processes                                                         |
+| Participants use of Game Design Patterns (GDPs) from thematic analysis of video data                   |                                                                                                  |
 | ------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------ |
+| GDPs can assist project navigation, acting as a framework for code examples and step-by-step tutorials | GDPs can scaffold the ideation processes                                                         |
 | GDPs aid the process of division of labour                                                             | GDP concepts are used in emerging technical processes                                            |
 | GDPs facilitate learners to design for others                                                          | GDP concepts and language used in informal feedback for peers to influence modification of games |
 | GDPs are propagated into the community through playtesting                                             | GDPs facilitate the use of wider funds of knowledge from home and hobby settings                 |
