moving out drama to another chapter

--- a/_posts/thesis_chapters/tocs/2024-6-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-6-6-Gdps.md_toc.md
@@ -46,6 +46,7 @@
         -   [Implications and beginnings of suggestions for
             practitioners](#implications-and-beginnings-of-suggestions-for-practitioners)
     -   [Chapter Conclusion](#chapter-conclusion)
+        -   [Simple table of uses](#simple-table-of-uses)
         -   [Summary of the pedagogical opportunities of Game Design
             Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
         -   [Transition to next chapter](#transition-to-next-chapter)
