section on contribution

--- a/_posts/thesis_chapters/2024-7-5-Design.md
+++ b/_posts/thesis_chapters/2024-7-5-Design.md
@@ -482,6 +482,16 @@ DROPPED THE REMIXING / SHOWCASE - COMMENT / SUMMARISE?
 THE IDEA BEING HOW CAN THE IDEAS OF CONSTRUCTIONIST TOOL KITS INTO THIS TOOL SET - PERHAPS PICK UP IN OBSERVATIONS SECTION. CHECK THE MOVED SECTION IN CHAPTER 6 NOW.
 
 
+    Task-specific programming (TSP) aims to provide the same easy-to-
+    understand operations for a microworld, but with a language and envi-
+    ronment designed for a particular purpose. The task-specific programming
+    language (TSPL) is purposefully limited in the abstractions and concepts
+    needed for the tasks or explorations in the microworld so that program-
+    ming becomes much easier to learn than a complete programming lan-
+    guage.
+    [@kong_providing_2022]
+
+
 <!-- NOTE - is this true? -->
 <!--
 These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. -->
