redoing LR strucure et al

--- a/_archive/2023-12-5-Gdps.md
+++ b/_archive/2023-12-5-Gdps.md
@@ -1265,3 +1265,21 @@ rejected notes
 ## Future Work / Omissions
 
 - Further testing of the Maps   -->
+
+## Potentiall of use in the discussion.
+
+### from earlier draft on GDPs as germ cell. 
+
+GDPs emerged as a unit of analysis through their initial observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved. Chapter four charts the evolution of the use of GDPs in the learning design from participant led brainstorming of desired features, to self-contained tutorials and code snippets. This then was enriched by wider framework from academia, professional community and and the work of educational Game Jams, the UMC framework.
+
+The design process is described as a mutual, i that while I led the production of the resources, I was driven by the explicit requests and implicit needs of the community and resulting feedback. The resulting design included a themed collection of GDPs
+
+The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
+
+At a larger level, the amalgamation of the GDPs into a finished game, is key to the success of the project. Good games communicate their affordances, (in the form of GDPs) to the player without the need for extensive additional documentation [@gee_learning_2005].
+
+This process also communicates GDPs implicitly to players, a process borne out by brainstorming sessions early in the process which say participants listing GDPs or variants of them without explicit guidance in this direction. This goal setting and implementation using GDP as a bse developed into a principle activity of P1 with varied results.
+
+By P2, to support a scaffolded entry to this practice, I developed quick start activities which proposed micro level code modification rather than implementing new code structures. While they were distinct in their pedagogy use, these shot-cuts stemmed from the same germ-cell base of altering the game through transforming GDPs.
+
+In addition to support their identification of the different elements that make up a game I created a sheet which drew on existing work framework (mechanics, space, goals, etc) to scaffold the process.
