--- a/_posts/thesis_chapters/tocs/2024-7-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-7-6-Gdps.md_toc.md
@@ -7,8 +7,8 @@
         patterns](#on-gdp-as-a-germ-cell-and-unit-of-analysis-recap-of-design-patterns)
         -   [Recap on design patterns and game design
             patterns](#recap-on-design-patterns-and-game-design-patterns)
-        -   [On the utility of identifying a germ cell/ unit of
-            analysis](#on-the-utility-of-identifying-a-germ-cell-unit-of-analysis)
+        -   [Identifying GDPs as a germ cell/ unit of
+            analysis](#identifying-gdps-as-a-germ-cell-unit-of-analysis)
     -   [Study of Vignette A](#study-of-vignette-a)
         -   [Descriptive Commentary on Vignette
             A](#descriptive-commentary-on-vignette-a)
