on design chapter adding gdps and germ cell into end of it

--- a/_posts/thesis_chapters/2024-7-5-Design.md
+++ b/_posts/thesis_chapters/2024-7-5-Design.md
@@ -102,7 +102,9 @@ In the previous chapter, I described phases of delivery of the formative interve
 
 This chapter and addresses the evolution of the key pedagogical features used in my research process using analysis of emerging tensions between system elements in learning design. Exploration of the shifts in the design of the intervention is done via a development of a design narrative which explores the driving forces behind changes in the design of each phase.
 
-This narrative is enriched by more in-depth analysis of three key areas of emerging areas of contradictions in activity. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use, those associated with project navigation and the use of supporting documentation, those surrounding cultural aspects of the game making activity. This chapter ends with a synthesis of initial barriers to engaging in game making practices encountered in this study and the resultant responses.
+This narrative is enriched by more in-depth analysis of three key areas of emerging areas of contradictions in activity and resultant interventions which addressed those contradictions. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use in P1 and P2, those associated with project navigation and the use of supporting documentation in P2, and finally contradictions surrounding identity in of the game making activity.
+
+The discussion section of this chapter includes a synthesis of key initial barriers to engaging this game making program and the resultant responses. A final section identifies  game design patterns (GDPs) as a "germ cell" concept that emerged in several forms in the evolution of the learning design.
 
 
 
@@ -1291,7 +1293,29 @@ Other tensions were resolved with more fundamental shifts to the overall structu
 EXAMPLES ALIGN BETTER WITH EMERGENT USE OF GDP CODED IN NEXT CHAPTER - SO PERHAPS CONTRAST THIS AND USE AS THE TRANSITION.
 
 
+### Emergence of GDPs as a germ cell of activity
+
+In Chapter 3 the AT concept of germ cell was described as a developmental aspect of activity which may manifest at different scopes of activity. This chapter described the evolution of a learning design to collaboratively make digital games in which GDPs were introduced as part of several guiding activities. These include:
+
+- GDPs identified via playing games as part of an activity adapted from Moveable Game Jams
+- GDPs incorporated as affordances into a starter game template in line with Microworld pedagogical principles
+- GDPs as quick start cards designrd to scaffold modification of code template
+- GDPs used in response  participant  requests for new features they wanted to add to their games resulting  as a menu of GDPs as documentation and code examples to facilitate creation of new code
+
+
+The germ cell of GDPs can been seen to be operating at different scopes of activity system as part of linked but varied goals. The data gathered showed that while many were at a level of making changes to personal code projects others were more to do with interaction in an emerging culture of this community of game makers. 
+
 ### Link to next chapter
+
+
+Chapter 7 explores the delivery and start to explore the impact of the and emerging community processes on cultural dimensions of the game making activity on participants development of agency.
+
+This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been  barriers to computer coding and use of particular software. I have explored alignment with the results research from the constructionist school.
+
+
+The next chapter explores a potentially fruitful aspect to help guidance for educational practitioners. The use of a design pattern approach. In this study the patterns take the form of working with common game elements game design patterns. In the language of the theoretical framework, I explore the process of working with GPDs as a germ cell of the overall game making activity.
+
+
 
 
 <!-- This chapter charts the evolution of tools and resources which occupy a middle ground between instruction and free choice creative approaches.  -->
@@ -1305,9 +1329,14 @@ Resnick's design principles are focused on the affordances of tool for creative 
 <!-- Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s.  -->
 
 
-This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been  barriers to computer coding and use of particular software. I have explored alignment with the results of extensive research from the constructionist school. While much the focus of much constructionist research  is on the design of toolsets to facilitate to personal knowledge building and expression via open project work, more recent work from researchers in this school has started to embrace the value of situated, community driven production as a lens [@kafai_theory_2020]. One of my central proposals regarding the methodology of this thesis is that while under-explored in this area, there is great potential in collaborative design based approaches to uncover situated and emergent practices in a way that can help seed community activity by other facilitators.
 
-The following chapters have a focus on this gap. The next chapter explores a potentially fruitful aspect to help guidance for educational practitioners. The use of a design pattern approach. In this study the patterns take the form of working with common game elements game design patterns. In the language of the theoretical framework, I explore the process of working with GPDs as a germ cell of the overall game making activity. Chapter six explores the delivery and start to explore the impact of the process drama used and emerging community processes on cultural dimensions of the game making activity.
+INTEGRATE WITH A PREVIOUS SECTION - SUMMARISE HERE IF NEEDED
+While much the focus of much constructionist research  is on the design of toolsets to facilitate to personal knowledge building and expression via open project work, more recent work from researchers in this school has started to embrace the value of situated, community driven production as a lens [@kafai_theory_2020].
+
+MOVE SOMEWHERE
+One of my central proposals regarding the methodology of this thesis is that while under-explored in this area, there is great potential in collaborative design based approaches to uncover situated and emergent practices in a way that can help seed community activity by other facilitators.
+
+
 
 <!-- Pivot to next chapter,
 
